# pass-secret-service

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: auth_gate.rs  cli.rs  config.rs  dbus_server.rs  error.rs  http_server.rs  key_store.rs  lib.rs  main.rs  pass.rs  redb_imps.rs  secret_store.rs
src/dbus_server/: collection.rs  item.rs  mod.rs  prompt.rs  secret_transfer.rs  service.rs  session.rs  utils.rs
src/secret_store/: json.rs  migration.rs  mod.rs  redb.rs
src/secret_store/json/: json_file.rs  mod.rs  schema.rs
src/secret_store/redb/: mod.rs
systemd/: org.freedesktop.secrets.service  pass-secret-service.service
